[tool.poetry]
name = "pdf-combiner"
version = "0.0.1"
description = ""
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/pdf-combiner"
repository = "https://github.com/dawsonbooth/pdf-combiner"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
pdf-combiner = 'console:main'

[tool.poetry.dependencies]
python = "^3.5"
pypdf2 = "^1.26.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
